<resources>
    <string name="app_name">SustainabilityTracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="bike">Bike</string>
    <string name="public_transportation">Public Transportation</string>
    <string name="car">Car</string>
    <string name="walk">Walk</string>
    <string name="calendar">Calendar</string>
    <string name="power">power</string>
    <string name="distance">distance</string>
    <string name="time">time</string>
    <string name="carpool">carpool</string>
    <string name="plane">plane</string>
    <string name="bus">bus</string>
    <string name="button">Button</string>
    <string name="enter_time">Enter Time</string>
    <string name="enter_distance">Enter Distance</string>
    <string name="enter_transportation_type">Enter Transportation Type</string>
    <string name="enter_time_in_hours">Enter Time In Hours</string>
    <string name="enter_distance_in_miles">Enter Distance in Miles</string>
    <string name="enter_type_of_transportation">Enter Type of Transportation</string>
    <string name="transportation_type">Transportation_Type</string>
    <string name="enter_electric_gas_etc">Enter Electric, Gas etc.</string>
    <string name="did_you_carpool_yes_or_no">Did you carpool? (Yes or No)</string>
    <string name="todo">TODO</string>
    <string name="enter">Enter</string>
    <string name="back">back</string>
</resources>
